<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#FFFFFF"
    tools:context="com.glenwell.bima.AboutUs"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ABOUT US"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff9900"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt1"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt2"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt3"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt4"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt5"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        />

    </LinearLayout>
    </ScrollView>
