<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.glenwell.bima.MainActivity"
    tools:showIn="@layout/activity_main">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:background="@drawable/bgingia"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    tools:context="com.glenwell.bima.MainActivity"
    tools:ignore="MergeRootFrame">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:background="@drawable/lebo"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="clip_vertical"
                    android:textColor="#ffffff"
                    android:textSize="35sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold"
                    />

                <TextSwitcher
                    android:id="@+id/textswitcher"
                    android:layout_width="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            >

            <LinearLayout
                android:id="@+id/container1"
                android:orientation="horizontal"
                android:gravity="center|bottom"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/loga"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:drawableTop="@drawable/logg"
                    android:drawablePadding="2dp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:background="#ff9900"
                    android:text="@string/logini"
                    android:textColor="@android:color/background_light" />


                <Button
                    android:id="@+id/finda"
                    android:layout_width="90dp"
                    android:drawablePadding="2dp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:drawableTop="@drawable/locc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_height="70dp"
                    android:background="#ff9900"
                    android:text="@string/findos"
                    android:textColor="@android:color/background_light" />



                <Button
                    android:id="@+id/packega"
                    android:layout_width="90dp"
                    android:layout_margin="10dp"
                    android:layout_height="70dp"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:drawableTop="@drawable/prse"
                    android:drawablePadding="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:background="#ff9900"
                    android:text="@string/vituuz"
                    android:textColor="@android:color/background_light"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container2"
                android:gravity="center|bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/contacta"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:drawableTop="@drawable/cont"
                    android:drawablePadding="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="left"
                    android:background="#ff9900"
                    android:text="@string/tuwahi"
                    android:textColor="@android:color/background_light"
                    />

                <Button
                    android:id="@+id/newsa"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#ff9900"
                    android:text="About Us"
                    android:textStyle="bold"
                    android:drawableTop="@drawable/nwsf"
                    android:drawablePadding="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/background_light"
                    />


                <Button
                    android:id="@+id/weba"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:textStyle="bold"
                    android:drawableTop="@drawable/webb"
                    android:drawablePadding="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:background="#ff9900"
                    android:layout_margin="10dp"
                    android:layout_gravity="right"
                    android:text="@string/bankweb"
                    android:textColor="@android:color/background_light"
                    />

            </LinearLayout>





        </LinearLayout>

    </LinearLayout>

<!--
</android.support.constraint.ConstraintLayout>-->
